--- a/pages/index.html
+++ b/pages/index.html
@@ -70,7 +70,7 @@
         </div>
     </nav>
 
-    <div class="container text-center">
+    <div style="margin-top: 10%;" class="container text-center">
         <div class="row" id="topsales">
         </div>
     </div>
