--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="revisit-after" content="1 day">
     <meta name="language" content="Japanese">
-    <meta name="author" content="nennneko5787">    
+    <meta name="author" content="nennneko5787">
     <meta property="og:title" content="トップページ" />
     <meta property="og:site_name" content="妖zon" />
     <meta property="og:description" content="時計, 妖怪パッド, アイテムから妖怪メダルまで！なんでも揃っているショッピングサイト" />
@@ -70,9 +70,16 @@
         </div>
     </nav>
 
-    <div style="margin-top: 15%;" class="container text-center">
+    <h1 style="margin-top: 4%; margin-right: 5px;">妖zon.com</h1>
+
+    <div class="container text-center">
         <div class="row" id="topsales">
         </div>
+    </div>
+
+    <div class="meigenbots" style="margin-right: 5px;">
+        <h2>名言ボット集</h2>
+        <a href="https://fng1bot.妖zon.com/">台風の目名言bot</a>
     </div>
 
     <footer class="bd-footer py-5 mt-5 bg-body-tertiary">
