--- a/pages/profile.html
+++ b/pages/profile.html
@@ -68,6 +68,16 @@
             bottom: 3%;
             right: 3%;
         }
+
+        .footer {
+            color: var(--bs-secondary-color);
+            background-color: var(--bs-secondary-bg);
+            margin: 1%;
+            padding: 1%;
+            border: solid 2px;
+            border-radius: 10px;
+            text-align: center;
+        }
     </style>
 
     <script>
@@ -213,6 +223,10 @@
                 <p>{{info.value}}</p>
             </div>
         {% endfor %}
+    </div>
+
+    <div class="footer">
+        あなたが名言botなら、<a href="https://x.com/Fng1bot">台風の目名言bot</a>に連絡してプロフィールを作成しましょう！
     </div>
 
     <div class="modeSwitchButton">
